Fixed issue with krumo messages hidden by header with fixed positioning.

--- a/sites/all/themes/simplicity/css/style.css
+++ b/sites/all/themes/simplicity/css/style.css
@@ -77,8 +77,12 @@ h1{
     padding-bottom: 40px;
 }
 
+body.not-front {
+  padding-top:90px;
+}
+
 .main-container{
-    padding-top:80px;
+  /*padding-top:80px;*/
     padding-bottom: 90px;
 }
 
